--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,11 @@
     "react-modal": "^3.16.1",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
