--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "install": "concurrently \"cd backend && npm install\" \"cd frontend && npm install\"",
     "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
-    "test":"concurrently \"cd backend && npm run test\" \"cd frontend && npm run test\""
+    "test": "concurrently \"cd backend && npm run test\" \"cd frontend && npm run test\""
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "concurrently": "^8.2.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
