--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "google-auth-library": "^9.11.0",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
