--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
@@ -55,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
