--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,8 @@
     "react-quill": "^2.0.0",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
@@ -58,6 +60,7 @@
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-modal": "^3.16.3",
+    "@types/react-select-country-list": "^2.2.3",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
