--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -57,6 +58,7 @@
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-modal": "^3.16.3",
