--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-apple-login": "^1.1.6",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
