--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
+    "@tinymce/tinymce-react": "^5.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -53,6 +54,7 @@
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tinymce": "^7.2.1",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
