--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "concurrently \"cd backend && npm run test\" \"cd frontend && npm run test\""
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "axios": "^1.7.2",
+    "ckeditor5": "^42.0.1",
     "concurrently": "^8.2.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
