--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../backend/src/pages/api/createsession.tsx", "src/components/ui/CustomEditor.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../backend/src/pages/api/createsession.tsx", "src/components/ui/CustomEditor.js","src/types"],
   "exclude": ["node_modules"]
 }
