--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.2",
+    "html-react-parser": "^5.1.12",
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
     "react": "^18",
@@ -56,6 +57,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
+    "@tabler/icons-react": "^3.11.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tinymce": "^7.2.1",
