--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "innovatio",
+  "name": "blogchain",
   "version": "1.0.0",
   "description": "MVP",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
