--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^5.16.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -49,7 +50,6 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
-    "react-quill": "^2.0.0",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
