--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.3.2",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
@@ -46,10 +45,14 @@
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "styled-components": "^6.1.12",
     "react-dropzone": "^14.2.3",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
+    "dompurify": "^3.1.6",
+    "framer-motion": "^11.3.19",
     "react-modal": "^3.16.1",
+    "@types/styled-components": "^5.1.34",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
@@ -66,6 +69,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
