--- a/package.json
+++ b/package.json
@@ -8,16 +8,9 @@
     "test": "concurrently \"cd backend && npm run test\" \"cd frontend && npm run test\""
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.34",
     "concurrently": "^8.2.2",
-    "dompurify": "^3.1.6",
-    "framer-motion": "^11.3.19",
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "styled-components": "^6.1.12"
-  },
-  "devDependencies": {
-    "@types/dompurify": "^3.0.5"
+    "react-dom": "^18.3.1"
   }
 }
