--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
+    "yup": "^1.4.0",
     "@tabler/icons-react": "^3.11.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
