--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "test": "concurrently \"cd backend && npm run test\" \"cd frontend && npm run test\""
   },
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "concurrently": "^8.2.2"
   }
 }
