--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & local-ssl-proxy --source 3001 --target 3000 --key localhost-key.pem --cert localhost.pem",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,11 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/material": "^5.16.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -29,48 +29,49 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
+    "@tabler/icons-react": "^3.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@types/styled-components": "^5.1.34",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
+    "framer-motion": "^11.3.19",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-apple-login": "^1.1.6",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "styled-components": "^6.1.12",
     "react-dropzone": "^14.2.3",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
-    "dompurify": "^3.1.6",
-    "framer-motion": "^11.3.19",
     "react-modal": "^3.16.1",
-    "@types/styled-components": "^5.1.34",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.4",
-    "yup": "^1.4.0",
-    "@tabler/icons-react": "^3.11.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tinymce": "^7.2.1",
-    "universal-cookie": "^7.1.4"
+    "universal-cookie": "^7.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/node": "^20",
     "@types/dompurify": "^3.0.5",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
