--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.1",
     "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -45,6 +47,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
