--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/styled-components": "^5.1.34",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,6 +48,7 @@
     "quill": "^2.0.2",
     "react": "^18",
     "react-apple-login": "^1.1.6",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -60,6 +62,7 @@
     "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.4.0",
@@ -79,6 +82,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/react-select-country-list": "^2.2.3",
     "@types/react-slick": "^0.23.13",
+    "@types/socket.io-client": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
