--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@giphy/js-fetch-api": "^5.6.0",
+    "@giphy/react-components": "^9.6.0",
     "@mui/material": "^5.16.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -32,6 +34,15 @@
     "@tabler/icons-react": "^3.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@tiptap/extension-code-block-lowlight": "^2.6.6",
+    "@tiptap/extension-image": "^2.6.6",
+    "@tiptap/extension-link": "^2.6.6",
+    "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/extension-underline": "^2.6.6",
+    "@tiptap/extension-youtube": "^2.6.6",
+    "@tiptap/pm": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
     "@types/styled-components": "^5.1.34",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
