--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@giphy/js-fetch-api": "^5.6.0",
     "@giphy/react-components": "^9.6.0",
     "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^7.14.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -52,6 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dompurify": "^3.1.6",
     "framer-motion": "^11.3.19",
     "html-react-parser": "^5.1.12",
