--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "google-auth-library": "^9.11.0",
+    "mixpanel": "^0.18.0",
     "mysql2": "^3.10.3",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.14",
