--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/aos": "^3.0.7",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
