--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
     "@types/styled-components": "^5.1.34",
+    "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.4",
