--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "install": "concurrently \"cd backend && npm install\" \"cd frontend && npm install\"",
     "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
+    "start": "concurrently \"cd backend && npm run start\" \"cd frontend && npm run start\"",
     "start:dev": "concurrently \"cd backend && npm run start:dev\" \"cd frontend && npm run dev\"",
     "test": "concurrently \"cd backend && npm run test\" \"cd frontend && npm run test\""
   },
