added first mixpanel metrics

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "framer-motion": "^11.3.19",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.401.0",
+    "mixpanel-browser": "^2.55.1",
     "next": "14.2.4",
     "quill": "^2.0.2",
     "react": "^18",
@@ -84,12 +85,14 @@
     "tailwindcss-animate": "^1.0.7",
     "tinymce": "^7.2.1",
     "universal-cookie": "^7.1.4",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/aos": "^3.0.7",
     "@types/dompurify": "^3.0.5",
+    "@types/mixpanel-browser": "^2.50.0",
     "@types/node": "^20",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
@@ -98,6 +101,7 @@
     "@types/react-select-country-list": "^2.2.3",
     "@types/react-slick": "^0.23.13",
     "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
